# BIDRAG

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agent/: bid_agent.py  intent_agent.py  law_agent.py  other_agent copy.py  other_agent.py  test_again.py
data_sources/bid_datas/: bidding_anhui_9991_year_2023_to_2025.csv
laws_datas/: cleaned_legal_articles_v3.xlsx
models/: LLM.py
retrieval/: vector_persist_db.py  vector_retrieval.py
