[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.26.0",
    "langchain>=0.2",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "lark>=1.3.1",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
[[tool.uv.index]]
url="https://repo.huaweicloud.com/repository/pypi/simple"
default=true
